tests/snapshots/encode_pattern_match__adt_tup_era.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/adt_tup_era.bend
---
Scott
unchecked Foo: Any
(Foo) = λa (a λb λc (b λd λ* λ* d c))

unchecked Main: Any
(Main) = (Foo (Tuple/Pair 1 5))

Tuple/Pair: (Any -> Any -> Tuple)
(Tuple/Pair) = λa λb λc (c a b)

NumScott
unchecked Foo: Any
(Foo) = λa (a λb switch b { 0: λc λd (c λe switch e { 0: λf λ* λ* f; _: *; } d); _: *; })

unchecked Main: Any
(Main) = (Foo (Tuple/Pair 1 5))

Tuple/Pair/tag: _
(Tuple/Pair/tag) = 0

Tuple/Pair: (Any -> Any -> Tuple)
(Tuple/Pair) = λa λb λc (c Tuple/Pair/tag a b)
