tests/snapshots/encode_pattern_match__bool_tup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/bool_tup.bend
---
Scott
unchecked foo: Any
(foo) = λa let (b, c) = a; (b λd d λ* Bool/False c)

unchecked main: Any
(main) = (foo (Bool/False, Bool/True))

Bool/True: Bool
(Bool/True) = λa λ* a

Bool/False: Bool
(Bool/False) = λ* λb b

NumScott
unchecked foo: Any
(foo) = λa let (b, c) = a; (b λd switch d { 0: λe e; _: λ* λ* Bool/False; } c)

unchecked main: Any
(main) = (foo (Bool/False, Bool/True))

Bool/True/tag: _
(Bool/True/tag) = 0

Bool/True: Bool
(Bool/True) = λa (a Bool/True/tag)

Bool/False/tag: _
(Bool/False/tag) = 1

Bool/False: Bool
(Bool/False) = λa (a Bool/False/tag)
