tests/snapshots/encode_pattern_match__box.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/box.bend
---
Scott
unbox: Any
(unbox) = λa (a λb b)

box/new: (Any -> box)
(box/new) = λa λb (b a)

NumScott
unbox: Any
(unbox) = λa (a λb switch b { 0: λc c; _: *; })

box/new: (Any -> box)
(box/new) = λa λb (b box/new/tag a)

box/new/tag: u24
(box/new/tag) = 0
